--- a/Admin/Courses.html
+++ b/Admin/Courses.html
@@ -49,8 +49,8 @@
                             <td>$49.99</td>
                             <td><span class="badge bg-success">Published</span></td>
                             <td class="table-actions">
-                                <button class="btn btn-sm btn-warning">Edit</button>
-                                <button class="btn btn-sm btn-danger">Delete</button>
+                                <a href="Edit.html" class="btn btn-primary">Edit</a>
+                                <a href="Delete.html" class="btn btn-danger">Delete</a>
                             </td>
                         </tr>
                     </tbody>
