--- a/Admin/Logout.html
+++ b/Admin/Logout.html
@@ -42,8 +42,8 @@
         <div class="logout-card text-center">
             <h2 class="mb-3">Admin Logout</h2>
             <p class="mb-4" style="color:white;">Are you sure you want to logout?</p>
-            <a href="Adminlogin.html" class="btn logout-button btn-lg">Yes, Logout</a>
-            <a href="AdminDash.html" class="btn btn-secondary btn-lg ms-3">Cancel</a>
+            <a href="../index.html" class="btn logout-button btn-lg">Yes, Logout</a>
+            <a href="Adashboard.html" class="btn btn-secondary btn-lg ms-3">Cancel</a>
         </div>
     </div>
 
