--- a/Teacher/Course.html
+++ b/Teacher/Course.html
@@ -48,12 +48,12 @@
                 <!-- Course Card 1 -->
                 <div class="col-md-4">
                     <div class="card shadow-sm">
-                        <!-- <img src=" " class="card-img-top" alt="Course Image"> -->
+                        <img src=" " class="card-img-top" alt="Course Image"> 
                         <div class="card-body">
                             <h5 class="card-title">Course Title 1</h5>
                             <p class="card-text">This is a short description of the course.</p>
-                            <a href="#" class="btn btn-primary">Edit</a>
-                            <a href="#" class="btn btn-danger">Delete</a>
+                            <a href="Edit.html" class="btn btn-primary">Edit</a>
+                         <a href="Delete.html" class="btn btn-danger">Delete</a>
                         </div>
                     </div>
                 </div>
@@ -61,12 +61,12 @@
                 <!-- Course Card 2 -->
                 <div class="col-md-4">
                     <div class="card shadow-sm">
-                        <!-- <img src=" " class="card-img-top" alt="Course Image"> -->
+                        <img src=" " class="card-img-top" alt="Course Image">
                         <div class="card-body">
                             <h5 class="card-title">Course Title 2</h5>
                             <p class="card-text">This is a short description of the course.</p>
-                            <a href="#" class="btn btn-primary">Edit</a>
-                            <a href="#" class="btn btn-danger">Delete</a>
+                            <a href="Edit.html" class="btn btn-primary">Edit</a>
+                         <a href="Delete.html" class="btn btn-danger">Delete</a>
                         </div>
                     </div>
                 </div>
@@ -74,17 +74,29 @@
                 <!-- Course Card 3 -->
                 <div class="col-md-4">
                     <div class="card shadow-sm">
-                        <!-- <img src="https://via.placeholder.com/300x150" class="card-img-top" alt="Course Image"> -->
+                         <img src="imge/tam1.jpg" class="card-img-top" alt="Course Image"> -->
                         <div class="card-body">
                             <h5 class="card-title">Course Title 3</h5>
                             <p class="card-text">This is a short description of the course.</p>
-                            <a href="#" class="btn btn-primary">Edit</a>
-                            <a href="#" class="btn btn-danger">Delete</a>
+                            <a href="Edit.html" class="btn btn-primary">Edit</a>
+                            <a href="Delete.html" class="btn btn-danger">Delete</a>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <div class="col-md-4">
+                <div class="card shadow-sm">
+                     <img src="002.jpg" class="card-img-top" alt="Course Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Course Title </h5>
+                        <p class="card-text">This is a short description of the course.</p>
+                        <a href="Edit.html" class="btn btn-primary">Edit</a>
+                         <a href="Delete.html" class="btn btn-danger">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
             <!-- Pagination -->
             <nav aria-label="Page navigation example" class="mt-4">
                 <ul class="pagination justify-content-center">
@@ -92,6 +104,7 @@
                     <li class="page-item"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
                     <li class="page-item"><a class="page-link" href="#">Next</a></li>
                 </ul>
             </nav>
