--- a/Teacher/logout.html
+++ b/Teacher/logout.html
@@ -67,7 +67,7 @@ body {
   <div class="logout-container">
     <h1>You've been logged out!</h1>
     <p>Thank you for visiting. You can log back in by clicking the button below.</p>
-    <a href="login.html" class="btn btn-login">Log In</a>
+    <a href="../index.html" class="btn logout-button btn-lg">Yes, Logout</a>
   </div>
 </body>
 </html>
