--- a/Teacher/Profile.html
+++ b/Teacher/Profile.html
@@ -1,83 +1,86 @@
-</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 
   <style>
     .profile-header {
-  text-align: center; 
-  background-color: #f9f9f9; 
-  padding: 20px; 
-  border-radius: 10px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  width: 300px; 
-  margin: 20px auto; 
-}
+      text-align: center;
+      background-color: #f9f9f9;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      margin: 20px auto;
+    }
 
-.profile-img {
-  width: 150px; 
-  height: 150px; 
-  border-radius: 50%;
-  object-fit: cover; 
-  border: 3px solid #007bff;
-}
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #007bff;
+    }
 
-h2 {
-  margin: 15px 0 5px; /* Adds spacing around the header */
-  font-size: 24px; /* Adjusts font size */
-  color: #333; /* Sets a dark gray color */
-}
+    h2 {
+      margin: 15px 0 5px;
+      font-size: 24px;
+      color: #333;
+    }
 
-p {
-  font-size: 16px; 
-  color: #555; 
-  margin: 5px 0 15px; 
-}
+    p {
+      font-size: 16px;
+      color: #555;
+      margin: 5px 0 15px;
+    }
 
-.btn {
-  background-color: #007bff; 
-  color: #fff;
-  border: none; 
-  padding: 10px 20px; 
-  border-radius: 5px; 
-  cursor: pointer; 
-  font-size: 16px; 
-  transition: background-color 0.3s ease;
-}
+    .btn {
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background-color 0.3s ease;
+    }
 
-.btn:hover {
-  background-color: #0056b3; /* Darker blue on hover */
-}
+    .btn:hover {
+      background-color: #0056b3;
+    }
 
-.mt-3 {
-  margin-top: 15px; /* Adds margin to the top */
-}
-.main-content{
-  min-height: 100vh;
-}
+    .mt-3 {
+      margin-top: 15px;
+    }
 
+    .main-content {
+      min-height: 100vh;
+    }
   </style>
 </head>
 <body>
-  <!-- Header -->
   <div id="Header-container"></div>
 
   <div class="container-fluid">
     <div class="row main-content">
-      <!-- Main Content Section -->
       <div class="col-sm-12 col-md-12 mt-2 p-4">
-      <!-- Profile Settings -->
-  <div class="card mb-4">
+        <div class="card mb-4">
           <div class="card-header">
             <h4>Profile Settings</h4>
           </div>
-          <div class="card-body">
+          <div class="card-body text-center">
+            <div class="mb-3">
+              <img id="profilePreview" src="https://via.placeholder.com/150" class="profile-img" alt="Profile Picture">
+            </div>
+            <div class="mb-3">
+              <label for="profilePhoto" class="form-label">Upload Profile Picture</label>
+              <input type="file" class="form-control" id="profilePhoto" accept="image/*">
+            </div>
             <form>
               <div class="mb-3">
                 <label for="name" class="form-label">Full Name</label>
@@ -99,7 +102,6 @@ p {
             </form>
           </div>
         </div>
-        <!-- About Section -->
         <div class="row mt-4">
           <div class="col-12">
             <div class="card p-4">
@@ -116,10 +118,20 @@ p {
     </div>
   </div>
   
-  <!-- Footer -->
   <div id="testfooter-container"></div>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.getElementById('profilePhoto').addEventListener('change', function(event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          document.getElementById('profilePreview').src = e.target.result;
+        }
+        reader.readAsDataURL(file);
+      }
+    });
+  </script>
 </body>
 </html>
