--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lms</title> 
-    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/022/845/929/non_2x/opened-old-book-with-magical-lights-on-vintage-table-generative-ai-photo.JPG" &gt;="">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStgL5dkPmL-EHBaUxA_fguaKrTbJv4z2AdE_ag1vr1gMYfMOoKJ1wPSv3i0WRZGrGfE-E&usqp=CAU" ">
     <link rel="icon" type="image/png" href="002.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
